# styx-emulator

./: Cargo.toml  requirements.txt
.github/workflows/: template-validation.yml
data/misc/: redirect.html
docs/source/: faq.rst
docs/source/user/: backends.rst
examples/raw-processor/: README.md  load.yaml
incubation/styx-cow/benches/: benchmark.rs
incubation/styx-cow/src/: lib.rs  main.rs
incubation/styx-pcs/src/: config.rs  lib.rs  processor.rs
incubation/styx-pcs/src/components/: config.rs  macros.rs  mod.rs
incubation/styx-pcs/src/peripherals/: mod.rs  uart.rs
incubation/styx-pcs/tests/: uart.rs
incubation/trace-tools/src/: lib.rs
styx/core/styx-cpu-pcode-backend/src/: backend_helper.rs  execute_pcode.rs  get_pcode.rs  lib.rs  register_manager.rs
styx/core/styx-cpu-pcode-backend/src/call_other/: mod.rs
styx/core/styx-cpu-pcode-backend/src/memory/: space_manager.rs
styx/core/styx-cpu-pcode-backend/styx-pcode-sleigh-backend/src/: context_internal.rs  sleigh.rs
styx/core/styx-cpu-pcode-backend/styx-pcode-translator/src/: translator.rs
styx/core/styx-cpu-pcode-backend/styx-sla/: build.rs
styx/core/styx-cpu-pcode-backend/styx-sla/src/: lib.rs
styx/core/styx-cpu-pcode-backend/styx-sleigh-bindings/sleigh/: sleigh.cc
styx/core/styx-cpu-pcode-backend/styx-sleigh-bindings/src/: lib.rs
styx/core/styx-grpc/src/: lib.rs
styx/core/styx-loader/: Cargo.toml
styx/core/styx-loader/example-input/: parameterized.yaml
styx/core/styx-loader/src/: loaders.rs
styx/core/styx-loader/src/loaders/: ihex.rs  parameterized.rs
styx/core/styx-loader/tests/: test_ihex.rs  test_ihex_elf_comparison.rs
styx/core/styx-memory/src/: lib.rs
styx/core/styx-util/src/: dtutil.rs
styx/peripherals/styx-base-clock/: Cargo.toml
styx/peripherals/styx-base-clock/src/: lib.rs
styx/peripherals/styx-spi/src/: lib.rs
styx/processors/arm/styx-kinetis21-processor/: Cargo.toml
styx/processors/bfin/styx-blackfin-processor/: Cargo.toml
styx/templates/: CI.md  COMPONENT_README.md  Cargo.toml  README.md  cargo-generate.toml  post-script.rhai  pre-script.rhai
styx/templates/scripts/: test-templates-local.sh
styx/templates/src/: lib.rs
styx/workspace-hack/: Cargo.toml
util/docker/: armtools.Dockerfile  ci.Dockerfile
util/etc/git/: pre-push
util/xtask/src/: adr.rs  feature_add.rs  rust_version.rs
(+35 files in other folders)
